some custom css

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.center{
+display: flex;
+align-items: center;
+justify-content: center;
+height: 100vh;
+background: #212020a9;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.center1{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+align-items: center;
+justify-content: center;
+height: 100vh;
+background: #1b0059a9;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.signin-container{
+
+  border: 2px solid black;
+  padding: 2rem;
+  border-radius: 20px;
+  width: 50vw;
+  height: max-content;
+  background: wheat;
+
+}
+.signup-container{
+
+  border: 2px solid black;
+  padding: 2rem;
+  border-radius: 20px;
+  width: 50vw;
+  height: max-content;
+  background: #017da7;
+
 }
